// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HAvatar render correctly with caption 1`] = `
"<figure class=\\"h-avatar h-avatar--size-colossal h-avatar--behavior-rounded\\"><img src=\\"https://hyone-backend-homolog.herokuapp.com/public/images/undraw/avatar_male.svg\\" class=\\"a-avatar__image\\">
  <figcaption class=\\"a-avatar__figcaption\\">My caption</figcaption>
</figure>"
`;

exports[`HAvatar render correctly with default props 1`] = `
"<figure class=\\"h-avatar h-avatar--size-colossal h-avatar--behavior-rounded\\"><img src=\\"https://hyone-backend-homolog.herokuapp.com/public/images/undraw/avatar_male.svg\\" class=\\"a-avatar__image\\">
  <!--v-if-->
</figure>"
`;
